# BenchmarksCPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  requirements.txt
.github/workflows/: benchmark_linux.yaml
benchmarks/: arithmeticPreallocate.hpp  core.hpp  nanobench.hpp  transpose.hpp
benchmarks/src/: arithmeticPreallocate.cpp  core.cpp  transpose.cpp
include/: combinedTrivialOperations.hpp  config.hpp  core.hpp  linearAlgebra.hpp  trivialOperations.hpp
results/: arithmetic.md
scripts/: dataProcessor.py  docGenerator.py
scripts/helpers/: benchmarkPreamble.md  warning.md
src/: combinedTrivialOperations.cpp  linearAlgebra.cpp  trivialOperations.cpp
